cmake_minimum_required(VERSION 3.19)
project(InterviewCPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(InterviewCPP main.cpp binTreeProbs1.cpp
        binTreeProbs1.h treeNode.h StackProbs1.cpp StackProbs1.h Graph1.cpp Graph1.h Ubisoft.cpp Ubisoft.h Array1.cpp Array1.h LinkedList1.cpp LinkedList1.h)
